--- a/src/index.css
+++ b/src/index.css
@@ -18,13 +18,27 @@ body{
   padding: .5rem;
   background-color: hsl(225, 6%, 25%);
 }
-editor-title
+.editor-container.collapsed{
+  flex-grow: 0;
+}
+.editor-container.collapsed .CodeMirror-scroll{
+  position: absolute;
+  overflow: hidden !important;
+}
+.expand-collapse-btn{
+  margin-left: .5rem;
+  background: none;
+  border: none;
+  color:white;
+  cursor: pointer;
+}
+.editor-title
 {
   display: flex;
   justify-content: space-between; 
   background-color: hsl(225, 6%, 13%);
   color: white;
-  padding: .5rem .5rem .5rem 1 rem;
+  padding: .5rem .5rem .5rem 1rem;
   border-top-right-radius: .5rem;
   border-top-left-radius: .5rem;
 
